--- a/src/Weather.css
+++ b/src/Weather.css
@@ -7,9 +7,13 @@
 }
 
 .Weather .info-style {
-  font-size: 24px;
+  font-size: 18px;
 }
 
 .Weather .temp-style {
   font-size: 64px;
+}
+
+.Weather .spinner {
+  margin-top: 200px;
 }
