--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,6 +1,4 @@
 .Weather {
-  max-width: 600px;
-  margin-top: 100px;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
@@ -14,6 +12,8 @@
   font-size: 64px;
 }
 
-.Weather .spinner {
-  margin-top: 200px;
+.Weather .unit {
+  font-size: 18px;
+  position: relative;
+  top: -30px;
 }
