--- a/src/Weather.css
+++ b/src/Weather.css
@@ -4,6 +4,10 @@
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
 }
 
+.weather a {
+  text-decoration: none;
+}
+
 .Weather .info-style {
   font-size: 18px;
 }
