--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,38 @@
-.App {
-  max-width: 600px;
-  margin: 50px auto;
-}
-
 .App a {
   text-decoration: none;
 }
 
 .App a:hover {
   text-decoration: underline;
+}
+
+.App .Background {
+  width: 100%;
+  height: 100vh;
+}
+
+.App .Background img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.App .content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.App .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
