--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,9 +1,3 @@
-.Weather {
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
-}
-
 .Weather .info-style {
   font-size: 18px;
 }
@@ -21,4 +15,35 @@
   font-size: 18px;
   position: relative;
   top: -30px;
+}
+
+.Weather .Background {
+  width: 100%;
+  height: 100vh;
+}
+
+.Weather .Background img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.Weather .content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.Weather .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
