--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,3 +1,7 @@
+.Weather {
+  padding: 50px 250px 10px;
+}
+
 .Weather .info-style {
   font-size: 18px;
 }
@@ -19,24 +23,26 @@
 
 .Weather .Background {
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  overflow: hidden;
 }
 
 .Weather .Background img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .Weather .content {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
+  width: 30%;
+  top: 100px;
+  left: 300px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
 }
 
 .Weather .overlay {
