--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,7 +1,3 @@
-.Weather {
-  padding: 50px 250px 10px;
-}
-
 .Weather .info-style {
   font-size: 18px;
 }
@@ -24,32 +20,12 @@
 .Weather .Background {
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 
 .Weather .Background img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-}
-
-.Weather .content {
-  position: absolute;
-  width: 30%;
-  top: 100px;
-  left: 300px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.Weather .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
 }
