--- a/src/Weather.css
+++ b/src/Weather.css
@@ -29,3 +29,11 @@
   border-radius: 10px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
 }
+
+.spinner {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
