--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,55 @@
+@media only screen and (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    margin: 0px !important;
+    width: 100% !important;
+  }
+
+  .left-content {
+    width: 100% !important;
+    height: 500px !important;
+  }
+
+  img {
+    border-radius: 0 !important;
+  }
+
+  .App h1 {
+    font-size: 28px !important;
+  }
+
+  .right-content {
+    width: 100% !important;
+    margin: 0 !important;
+    margin-top: -50px !important;
+  }
+
+  .info-style {
+    font-size: 16px !important;
+  }
+
+  .temp-style {
+    font-size: 48px !important;
+  }
+
+  .ForecastInformation {
+    margin-top: 30px !important;
+  }
+
+  footer {
+    margin-top: 10px !important;
+  }
+}
+
 .App {
   background-color: #9b9d9d;
   color: #5f5e5d;
+  font-family: "Orbitron";
+}
+
+.App h1 {
+  font-family: "Press Start 2P", cursive;
+  font-size: 32px;
 }
 
 .App a {
@@ -35,7 +84,8 @@ section {
 .App .container {
   width: 90%;
   max-width: 1000px;
-  margin: 0 auto;
+  margin: 50px 0;
+  padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -52,6 +102,7 @@ section {
   background-color: #d8dee2;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
   margin-left: -100px;
+  padding: 15px;
   border-radius: 10px;
 }
 
