--- a/src/Forecast.css
+++ b/src/Forecast.css
@@ -5,4 +5,9 @@
 .Forecast .min-temperature {
   opacity: 0.7;
   margin-left: 5px;
+  font-size: 14px;
+}
+
+.Forecast .max-temperature {
+  font-size: 14px;
 }
